Add `--enable-native-access` JVM arguments to avoid startup warning